--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Esplora Berlino - Home</title>
+  <link rel="shortcut icon" href="immagini/logo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <!-- Includi Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
