--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Esplora Berlino - Menu Generale</title>
+  <link rel="shortcut icon" href="immagini/logo.ico" type="image/x-icon">
   <!-- Importa il font Lato -->
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <!-- Includi Tailwind CSS v3.x.x tramite CDN -->
