--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="container max-w-5xl mx-auto p-5">
     <!-- Sezione -->
     <div class="flex flex-wrap mb-10 bg-white border-l-4 border-yellow-400 shadow-lg">
-      <img src="immagini/berlino.jpg" alt="Vista di Berlino" class="w-full max-w-md">
+      <img src="immagini/logo.svg" alt="Vista di Berlino" class="w-full max-w-md">
       <div class="flex-1 p-5">
         <h2 class="text-red-600 mt-0">Benvenuti a Berlino</h2>
         <p class="leading-relaxed">
