--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <link rel="shortcut icon" href="immagini/logo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
-    .font-lato {
-      font-family: 'Lato', sans-serif;
-    }
-  </style>
+  <script src="tailwind.config.js"></script>
 </head>
 <body class="m-0 font-lato bg-gray-100 text-gray-800">
 
@@ -23,19 +18,19 @@
   </header>
 
   <!-- Menu di Navigazione -->
-  <nav class="bg-red-600 flex justify-center flex-wrap">
+  <nav class="bg-red flex justify-center flex-wrap">
     <ul class="flex m-0 p-0 list-none">
       <li>
-        <a href="index.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow-400 hover:text-black">Home</a>
+        <a href="index.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow hover:text-black">Home</a>
       </li>
       <li>
-        <a href="itinerario.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow-400 hover:text-black">Itinerario</a>
+        <a href="itinerario.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow hover:text-black">Itinerario</a>
       </li>
       <li>
-        <a href="supporto.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow-400 hover:text-black">Supporto</a>
+        <a href="supporto.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow hover:text-black">Supporto</a>
       </li>
       <li>
-        <a href="menu.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow-400 hover:text-black">Menu</a>
+        <a href="menu.html" class="text-white py-4 px-5 block transition duration-300 hover:bg-yellow hover:text-black">Menu</a>
       </li>
     </ul>
   </nav>
@@ -43,17 +38,17 @@
   <!-- Contenitore Principale -->
   <div class="container max-w-5xl mx-auto p-5">
     <!-- Sezione -->
-    <div class="flex flex-wrap mb-10 bg-white border-l-4 border-yellow-400 shadow-lg">
+    <div class="flex flex-wrap mb-10 bg-white border-l-4 border-yellow shadow-lg">
       <img src="immagini/logo.svg" alt="Vista di Berlino" class="w-full max-w-md">
       <div class="flex-1 p-5">
-        <h2 class="text-red-600 mt-0">Benvenuti a Berlino</h2>
+        <h2 class="text-red mt-0">Benvenuti a Berlino</h2>
         <p class="leading-relaxed">
           Scopri la città dove storia e modernità si fondono. Esplora monumenti iconici, immergiti nella cultura locale e vivi l'atmosfera unica della capitale tedesca.
         </p>
         <p class="leading-relaxed">
           Visita le nostre sezioni per pianificare il tuo viaggio perfetto.
         </p>
-        <a href="itinerario.html" class="inline-block mt-3 bg-red-600 text-white py-2 px-4 rounded hover:bg-yellow-400 hover:text-black transition duration-300">Scopri l'Itinerario</a>
+        <a href="itinerario.html" class="inline-block mt-3 bg-red text-white py-2 px-4 rounded hover:bg-yellow hover:text-black transition duration-300">Scopri l'Itinerario</a>
       </div>
     </div>
   </div>
