--- a/supporto.html
+++ b/supporto.html
@@ -6,21 +6,7 @@
   <link rel="shortcut icon" href="immagini/logo.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: {
-            'lato': ['Lato', 'sans-serif'],
-          },
-          colors: {
-            red: '#FF0000',
-            yellow: '#FFD700',
-          },
-        }
-      }
-    }
-  </script>
+  <script src="tailwind.config.js"></script>
 </head>
 <body class="m-0 font-lato bg-gray-100 text-gray-800">
 
